sequel: УправДом v1.0.1.2 Перед внедрением БСП.Константы: Собственник, Адрес.Исправления.

--- a/УправДом/src/Documents/ОплатаГазоснабжения/Forms/ФормаДокумента/Form.form
+++ b/УправДом/src/Documents/ОплатаГазоснабжения/Forms/ФормаДокумента/Form.form
@@ -1095,6 +1095,10 @@
       <items xsi:type="form:FormField">
         <name>ДанныеПлатежаТариф</name>
         <id>53</id>
+        <title>
+          <key>ru</key>
+          <value>Тариф  (1000 м3)</value>
+        </title>
         <visible>true</visible>
         <enabled>true</enabled>
         <userVisible>
