--- a/УправДом/src/Documents/ОплатаИнтернет/Forms/ФормаДокумента/Form.form
+++ b/УправДом/src/Documents/ОплатаИнтернет/Forms/ФормаДокумента/Form.form
@@ -426,9 +426,6 @@
           <extInfo xsi:type="form:LabelFieldExtInfo">
             <autoMaxWidth>true</autoMaxWidth>
             <autoMaxHeight>true</autoMaxHeight>
-            <border xsi:type="core:BorderDef">
-              <width>1</width>
-            </border>
           </extInfo>
         </items>
         <items xsi:type="form:FormField">
@@ -465,9 +462,6 @@
           <extInfo xsi:type="form:LabelFieldExtInfo">
             <autoMaxWidth>true</autoMaxWidth>
             <autoMaxHeight>true</autoMaxHeight>
-            <border xsi:type="core:BorderDef">
-              <width>1</width>
-            </border>
           </extInfo>
         </items>
         <visible>true</visible>
@@ -1239,6 +1233,10 @@
   <handlers>
     <event>OnOpen</event>
     <name>ПриОткрытии</name>
+  </handlers>
+  <handlers>
+    <event>OnCreateAtServer</event>
+    <name>ПриСозданииНаСервере</name>
   </handlers>
   <saveWindowSettings>true</saveWindowSettings>
   <autoTitle>true</autoTitle>
