--- a/УправДом/src/Documents/ОплатаТКО/Forms/ФормаДокумента/Form.form
+++ b/УправДом/src/Documents/ОплатаТКО/Forms/ФормаДокумента/Form.form
@@ -383,9 +383,6 @@
         <extInfo xsi:type="form:LabelFieldExtInfo">
           <autoMaxWidth>true</autoMaxWidth>
           <autoMaxHeight>true</autoMaxHeight>
-          <border xsi:type="core:BorderDef">
-            <width>1</width>
-          </border>
         </extInfo>
       </items>
       <visible>true</visible>
@@ -1169,6 +1166,10 @@
   <handlers>
     <event>OnOpen</event>
     <name>ПриОткрытии</name>
+  </handlers>
+  <handlers>
+    <event>OnCreateAtServer</event>
+    <name>ПриСозданииНаСервере</name>
   </handlers>
   <saveWindowSettings>true</saveWindowSettings>
   <autoTitle>true</autoTitle>
