--- a/УправДом/src/Documents/ОплатаЭлектроснабжения/Forms/ФормаДокумента/Form.form
+++ b/УправДом/src/Documents/ОплатаЭлектроснабжения/Forms/ФормаДокумента/Form.form
@@ -1395,6 +1395,10 @@
     <event>OnOpen</event>
     <name>ПриОткрытии</name>
   </handlers>
+  <handlers>
+    <event>OnCreateAtServer</event>
+    <name>ПриСозданииНаСервере</name>
+  </handlers>
   <saveWindowSettings>true</saveWindowSettings>
   <autoTitle>true</autoTitle>
   <autoUrl>true</autoUrl>
